<resources>
    <string name="facebook_app_id">388616622311363</string>
    <string name="fb_login_protocol_scheme">fb388616622311363</string>
    <string name="server_client_id">917642443766-bj2f4usiq1c8rb1dmkad7aooe4cdeme8.apps.googleusercontent.com</string>
    <string name="api_key">AIzaSyAaVnz03Xmd1cZGKPcVcKFHg0rAX4o_BAs</string>
    <string name="app_name">iChota</string>
    <string name="skip">Skip</string>
    <string name="txtOnBoarding1">The safe and simple way to buy,\nsell, or bid on new or used\nitems anytime,anywhere.</string>
    <string name="txtOnBoarding2">Search listings of local service\nproviders for anything, we\'ve\ngot you covered.</string>
    <string name="txtOnBoarding3">Secure app tools like emergency\ncontact alert and real-time location\nsharing, your safety is our priority.</string>
    <string name="Continue">Continue</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="pleaseentercorrectpin">Please enter correct pin</string>
    <string name="loginSuccess">Login Success</string>
    <string name="signUpSuccess">SignUp Success</string>
    <string name="youhavesuccessfulylogin">You have successfully login</string>
    <string name="yourposthasbeenlistedsuccessfully">Your post has been listed successfully</string>
    <string name="dontHaveAccount">Don\'t have an Account yet? Signup</string>
    <string name="welcomeBack">Welcome Back</string>
    <string name="loginWithEmailStartBuying">Login with your Email to start buying,\nselling and bidding.</string>
    <string name="yourEmail">Your Email</string>
    <string name="yourPassword">Your Password</string>
    <string name="forgotyourPassword">Forgot your Password?</string>
    <string name="loginToMyAccount">Login to my Account</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="capture">Capture</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="sos_btn_call_assi">SOS Button</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="sales">Sales</string>
    <string name="recent">Recent</string>
    <string name="unreadMessages">Unread Messages</string>
    <string name="markAllAsRead">Mark All as Read</string>
    <string name="emergencyContact">Emergency Contact</string>
    <string name="emergencyDesp">This is an option for the buyer and the seller to trun on when meeting on for a buy or sell.Your safety is our priority</string>
    <string name="responseRate">Response Rate</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="accountVerification">Account Verification</string>
    <string name="paymentMethod">Payment Methods</string>
    <string name="yourApproximateLocation">Your approximate location</string>
    <string name="userRatings">User Ratings</string>
    <string name="communication">Communication</string>
    <string name="productQuality">Product Quality</string>
    <string name="processingSpeed">Processing Speed</string>
    <string name="dummyParagrapher">"Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet Lorem ipsun sit amet.Lorem ipsum sit amet "</string>
    <string name="showMore">Show More</string>
    <string name="dragImages">Drag left and right the set on images and click the desired cover.\nAttatch up to 6 images</string>
    <string name="productInfo">Product Info</string>
    <string name="productName">Product Name</string>
    <string name="prodcutDescription">Product description</string>
    <string name="productPrice">Product Price</string>
    <string name="firmOnPrice">Firm on Price?</string>
    <string name="buyingOptions">Buying Options</string>
    <string name="pickup">Pickup</string>
    <string name="bid">Bid</string>
    <string name="shipping">Shipping</string>
    <string name="conditions">Conditions</string>
    <string name="New">New</string>
    <string name="likeNew">Like New</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="bad">Bad</string>
    <string name="enterDetailsText">Enter your details below to get\nstarted immediately</string>
    <string name="yourName">Your Name</string>
    <string name="yourPhoneNum">Your Phone Number</string>
    <string name="confirmYourPassword">Confirm Your Password</string>
    <string name="getStarted">Get Started</string>
    <string name="alreadyHaveAcc">Already have account? Sign In</string>
    <string name="sellShipNationWide">Sell and Ship Nation wide</string>
    <string name="shippingPolicyText">A km 12.9% service fee applies. Shipping Policy</string>
    <string name="selectYourBoxSize">Select your box size:</string>
    <string name="chooseBoxInstructions">Choose the closest box size. No size over 18* and/or 20 pounds</string>
    <string name="agreeDescription">By posting nationalwide you agree to our\nshipping policy and Terms of Service</string>
    <string name="postProduct">Post Product</string>
    <string name="postanadd">Post an Ad</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="letsGetStarted">Let\'s Get Started</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="enterEmailHereText">Enter your email address here to receive\nfurther instruction</string>
    <string name="safetyDiscription">Tell us about any safety concerns you experienced while completing this transaction.
        \n<b>(We won’t share what you write with your seller/buyer.)</b></string>
    <string name="bold_statement">This is a &lt;bold&gt; statement</string>
    <string name="submit">Submit</string>
    <string name="favourites">Favorites</string>
    <string name="itemDescription">Item Description</string>
    <string name="itemListedSince">Item Listed Since</string>
    <string name="itemLocation">Item Location</string>
    <string name="viewProfile">View Profile</string>
    <string name="sellerLocation">Seller Location</string>
    <string name="sendAnOffer">Send an Offer</string>
    <string name="inquire">Inquire</string>
    <string name="priceRange">Price Range</string>
    <string name="minimum">Minimum</string>
    <string name="distance">Distance</string>
    <string name="applyFilter">Apply Filter</string>
    <string name="myNetwork">My Network</string>
    <string name="go_exploresearchsomething">Go explore,search some listing and\nfollow someone,anyone</string>
    <string name="thatisabummerlistsomethingyou">That\'s bummer,list something you don\'t\nuse or need,someone will follow you.</string>
    <string name="noFollower">You don\'t have any\nfollower yet</string>
    <string name="createYourAccount">Create your account</string>
    <string name="fullName">Enter your full name</string>
    <string name="enterEmail">Enter your email</string>
    <string name="register">Register</string>
    <string name="registrationSuccessfull">Registration Successfully</string>
    <string name="pleaselogintheapp">Please Login</string>
    <string name="hint">Write Something….</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="confirmbid">Confirm Bid</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="enteremergencycontactnumber">Enter Emergency Contact</string>
    <string name="registerTermsDescription">By registering you agree to our terms and conditions as well as our privacy policy</string>
    <string name="services">Services</string>
    <string name="newest">Newest</string>
    <string name="priceHighToLow">Price: High to low</string>
    <string name="priceLowToHigh">Price: Low to high</string>
    <string name="closest">Closest</string>
    <string name="maximum">Maximum</string>
    <string name="location">Location</string>
    <string name="reset">Reset</string>
    <string name="edit">Edit</string>
    <string name="distaneMiles">Distance (miles)</string>
    <string name="max">Max</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="zipCode">Zip Code</string>
    <string name="whereAreYouSearching">Where are you searching?</string>
    <string name="withinMyLocation">Within my location</string>
    <string name="account">Account</string>
    <string name="hld_btn_fr_3_sec">Hold the button for 3 seconds</string>
    <string name="txt_sos">SOS</string>
    <string name="txt_emg_hlp_ned">Emergency help needed?</string>
    <string name="txt_alt_aut_shr_yur">This will alert your local authorities and share your</string>
    <string name="txt_private_info_lk">Your private information,like your location plays an</string>
    <string name="txt_important_role">important role in your safety,Sharing your current location</string>
    <string name="txt_may_affects_you">may affects you.Are you sure you want to share your</string>
    <string name="txt_location">location?</string>
    <string name="contactinformation">Contact Information</string>
    <string name="addressinformation">Address Information</string>
    <string name="addemergencycontact">Add Emergency Contact</string>
    <string name="addressAddress">Add Address</string>
    <string name="maybetrysendingonchair">Maybe try standing on a chair,clapping 5\ntimes while saying iChota.</string>
    <string name="txt_alt_aut_shr_yur_curt_loc">current location.</string>
    <string name="needtologin">Need to login to post an add</string>
    <string name="general">General</string>
    <string name="purchasesAndSales">Purchases and Sales</string>
    <string name="notifications">Notifications</string>
    <string name="publicProfile">Public Profile</string>
    <string name="customProfileLink">Custom profile link</string>
    <string name="accountSettings">Account Settings</string>
    <string name="help">Help</string>
    <string name="communityForums">Community Forums</string>
    <string name="rateUs">Rate us</string>
    <string name="contactSupport">Contact Support</string>
    <string name="logout">Logout</string>
    <string name="verified">Verified</string>
    <string name="verificationPending">Verification pending</string>
    <string name="itemReport">Item Report</string>
    <string name="offensiveContent">Offensive content</string>
    <string name="fraud">Fraud</string>
    <string name="duplicateAd">Duplicate ad</string>
    <string name="productAlreadySold">Product already sold</string>
    <string name="other">Other</string>
    <string name="send">Send</string>
    <string name="comments">Comments</string>
    <string name="addPost">Add Post</string>
    <string name="alert">Alert</string>
    <string name="shareLocation">Share Location</string>
    <string name="chooseOptions">Choose Options</string>
    <string name="markAsSold">Mark as sold</string>
    <string name="delete">Delete</string>
</resources>