<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    android:layout_margin="24dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <TextView
            android:id="@+id/tv_item_report_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/itemReport"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checkedButton="@id/rb_other"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_report_header">

            <RadioButton
                android:id="@+id/rb_offensive_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/offensiveContent"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorTextPrimary"
                app:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rb_fraud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/fraud"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorTextPrimary"
                app:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rb_duplicate_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/duplicateAd"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorTextPrimary"
                app:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rb_product_already_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/productAlreadySold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorTextPrimary"
                app:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rb_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/other"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorTextPrimary"
                app:buttonTint="@color/colorPrimary" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_comments"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_outline_et"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="start"
            android:hint="@string/comments"
            android:inputType="text"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/rg_report" />


        <Button
            android:id="@+id/bt_cancel"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_send"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/et_comments"
            app:shapeAppearance="@style/ShapeAppearance.App.SmallComponents_round_12"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/bt_send"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/send"
            app:backgroundTint="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_cancel"
            app:layout_constraintTop_toTopOf="@+id/bt_cancel"
            app:shapeAppearance="@style/ShapeAppearance.App.SmallComponents_round_12" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
