<LinearLayout android:id="@+id/ll_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:gravity="bottom">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextSecondary"
        android:text="@string/chooseOptions"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_margin="16dp"
        android:fontFamily="@font/sf_pro_display_medium"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey200"/>


    <Button
        android:id="@+id/bt_mark_as_sold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/markAsSold"
        android:textColor="@color/colorTextPrimary"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey200"/>

    <Button
        android:id="@+id/bt_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/delete"
        android:textColor="@color/colorRed500"
        android:layout_marginBottom="24dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>



</LinearLayout>