<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardingPagerActivity">

    <ImageView
        android:id="@+id/iv_ichota_logo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ichota_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_pro_text_light"
        android:text="@string/skip"
        android:textColor="@color/colorGrey600"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_ichota_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_ichota_logo" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_on_boarding"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ichota_logo" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_pager_on_boarding" />

    <TextView
        android:id="@+id/tv_onBoarding_desp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/txtOnBoarding1"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <Button
        android:id="@+id/bt_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bt_bg_primary"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/Continue"
        android:textAllCaps="false"
        android:visibility="gone"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_onBoarding_desp" />

    <Button
        android:id="@+id/bt_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bt_bg_grey200"
        android:text="@string/back"
        android:textSize="18sp"
        android:visibility="gone"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack900"
        app:layout_constraintEnd_toStartOf="@+id/bt_next"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/bt_continue" />

    <Button
        android:id="@+id/bt_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/bt_bg_primary"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="gone"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_back"
        app:layout_constraintTop_toTopOf="@+id/bt_back" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bt_bg_primary"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/bt_continue" />

    <TextView
        android:id="@+id/bt_goto_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:gravity="center"
        android:text="@string/dontHaveAccount"
        android:textColor="@color/colorBlack800"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>